styles.css
#map {
    width: 75%;
    height: 100%;
}

#logo {
    position: absolute;
    height: 10%;
    padding: 10px 0 10px 20px;
    display: inline-block;
    box-align: center;
    z-index: 100;
}

#tree {
    width: 100%;
    height: 70%;
    font-family: 'Montserrat';
    font-size: .8em;
    display: block;
    line-height: 10px;
}

.title {
    background-color: white;
    opacity: 100%;
    position: absolute;
    width: 100%;
    padding: 5px 5px 20px 5px;
    display: inline;
    z-index: 90;
    height: 10%;
    border-bottom: solid black;
}

h1 {
    font-family: 'Montserrat-Black';
    font-size: 4vw;
    text-align: center;
    line-height: 40px;
    padding: 15px 20px 0 20px;
    right: 0px;
}

h2 {
    font-family: 'Montserrat-Bold';
    font-size: 1em;
    margin: 5px 0 10px 0;
    text-align: center;
}

h3 {
    font-family: 'Montserrat';
    font-size: 1.5em;
    text-align: center;
    margin: 5px 0 10px 0;
}


#logo {
    position: absolute;
    height: 80px;
    padding: 10px 0 10px 20px;
    display: inline-block;
    box-align: center;
    z-index: 100;
}


.mapboxgl-popup-content {
    padding: 10px;
    border-radius: .5em;
    max-width: max-content;
}

.mapboxgl-popup-content h {
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    font-size: 1.2em;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    border-width: 0px 0px 0.5px 0px;
    border-style: solid;
    border-color: rgb(80, 80, 80);
}

.mapboxgl-popup-content p {
    font-family: 'Montserrat', sans-serif;
    font-weight: 300;
    font-size: 1em;
    line-height: 2em;
    overflow-x: visible;
}

.menu {
    border-left: solid black; 
    width: 25%;
    right: 0;
    height: 90%;
    z-index: 100;
}

.menu-legend {
    position: absolute;
    right: 0;
    top: 10%;
    width: 25%;
    height: 30%;
    padding: 2px 2px 2px 2px;
    border-left: solid black; 
    border-bottom: solid black;
}

.menu-tree {
    position: absolute;
    right: 0;
    bottom: 0px;
    width: 25%;
    height: 60%;
    padding: 2px 2px 2px 2px;
    border-left: solid black; 
    overflow: auto;
}

table {
    table-layout: fixed;
    width: 100% ;
}

td {
    font-family: 'Montserrat';
    font-size: .8em;
    width: 20%;
    height: 5%;
    text-align: center;
}

th {
    font-family: 'Montserrat';
    font-weight: 200;
    opacity: 100%;
    font-size: .8em;
    padding: 3px;
    margin: 0px;
    text-align: center;
}   



/* 

.row {
    height: 8px;
    width: 90%;
    margin-left: 5%;
} */

.dem1-colors {
   background: linear-gradient(to right, #d7e1ec, #4f93ba);
   margin-bottom: 3px;
}

.dem2-colors {
    background: linear-gradient(to right, #e1e2ed, #868fba);
    margin-bottom: 3px;
}

.rep1-colors {
    background: linear-gradient(to right, #f2d9d2, #cf635d);
    margin-bottom: 3px;
}

.rep2-colors {
    background: linear-gradient(to right, #fee5cf, #f68f3e);
    margin-bottom: 3px;
}

.ind1-colors {
    background: linear-gradient(to right, #fef0db, #fac566);
    margin-bottom: 3px;
}

.ind2-colors {
    background: linear-gradient(to right, #d4e4e2, #119f92);
    margin-bottom: 3px;
}

#margin-label {
    font-family: 'Montserrat-Regular';
    font-size: .7em;
    display: inline-block;
    text-align: center;
    width: 100%;
}  

p {
    font-family: 'Montserrat';
    opacity: 100%;
    font-size: .8em;
    display: block;
    margin: 15px 0 5px 0;
    line-height: 15px;
}   

#welcome-message {
    display: None;
    width: 600px;
}

#welcome-message a {
    font-family: 'Montserrat-Bold';
}

